--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,21 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Ps2RtmapDevLatest</title>
+  <title>配列の読み書きテスト</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 </head>
 
 <body>
-  <app-root>Loading...</app-root>
+<div class="container">
+<div class="row">
+  <div class="col-sm-12">
+    <app-root>Loading...</app-root>
+  </div>
+</div>
+</div>
 </body>
 </html>
